# stockfighter

fe/: .gitignore  bs-config.js  elm-package.json  package.json  webpack.config.js
fe/app/: index.html  index.js
fe/app/styles/: main.scss
fe/elm/: App.elm  History.elm  Other.elm  Start.elm
fe/elm/Native/: History.js  MyUtils.js
fe/web_loaders/: elm.loader.js
hs/: stack.yaml
hs/machine/: machine.cabal
hs/machine/app/: Main.hs
hs/machine/src/: Machine.hs
hs/machine/src/Machine/: Config.hs  Core.hs  Types.hs  WebSockets.hs
