name:                machine
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/machine#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Machine
    Machine.Config
    Machine.Core
    Machine.Types
    Machine.WebSockets
  other-modules:
    Paths_machine
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , connection
                     , network
                     , optparse-applicative
                     , pipes
                     , text
                     , time
                     , unordered-containers
                     , websockets

executable machine
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , machine
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/machine
